2010-01-25  Onkar Shinde  <onkarshinde@gmail.com>

	* po/*.po, AUTHORS: Updated Gujarati and Spanish translation from
	launchpad.

2010-01-24  Onkar Shinde  <onkarshinde@gmail.com>

	* po/fr.po, po/LINGUAS, AUTHORS: French translation.

2010-01-17  Onkar Shinde  <onkarshinde@gmail.com>

	* doc/Makefile.am: Fix a small problem in man page installation.
	* configure.in: Remove some redundant path definitions. Fix PACKAGE_URL
	declaration.
	* pixmaps/Makefile.am: Use PACKAGE_PIXMAPS_DIR directly.
	* Makefile.am: Use docdir directly.
	* src/Makefile.am: Move PACKAGE_DOC_DIR definition here. It is only used
	in source code and no other place.
	* .gitignore: Ignore all .gmo files.
	* src/8085.h, src/interface.c, src/support.h: Mark menu labels and tooltips
	for translation. Call the GTK+ helper function for translation.
	* po/*.po, po/gnusim8085.pot: Update as per code changes.

2010-01-15  Onkar Shinde  <onkarshinde@gmail.com>

	* doc/Makefile.am: Better handling of installation of examples and manpage.
	* po/*: Spanish translation.

2009-12-29  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in: Define a variable if gtksourceview version is >= 2.8.
	* src/gui-editor.c: Improve the change by Sridhar to use different
	methods based on gtksourceview version.
	* src/interface.c: Use gtk_show_uri, in the hook for about dialog,
	when available (GTK+ >= 2.14.0).
	* configure.in, src/interface.c, src/asm-listing.c: Define website url
	in configure.in and use it everywhere instead of hard coded value.
	* src/gui-editor.c: Print website url in footer. Now that we have a footer
	reduce bottom margin.
	* po/*: Updated as per latest changes in code.

2009-12-28  Sridhar Ratnakumar <srid@nearfar.org>

	* src/gui-editor.c: Fix deprecation warning from GtkSourceView

2009-12-28  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in: Gettext version updated to 0.17. Removed a bunch of
	redundant declarations.
	* src/main.c: Change variables in gettext calls to match changes in