@@ -45,6 +45,30 @@ AM_CONDITIONAL([WIN32], test "$WIN32" = "yes")
 gtk_required="2.12.0"
 gtksourceview2_required="2.2.0"
 
+AC_ARG_ENABLE([gio],
+	AS_HELP_STRING([--enable-gio],[Enable gio based file handling (default: disabled)]),
+	[enable_gio=$enableval],
+	[enable_gio=no])
+if test "x$enable_gio" = "xyes"; then
+	PKG_CHECK_MODULES(GIO, [gio-2.0],, [
+    AC_MSG_ERROR(
+    [
+    Cannot find gio
+
+        Please check the following:
+
+         * Do you have the glib2 development package installed?
+           (usually called glib2-devel for rpm based distros or
+            libglib2.0-dev for deb based distros or similar)
+           If
+               ls -l /usr/lib/pkgconfig/gio-2.0.pc
+           reports that the file does not exist, then you are missing
+           the development package.
+
+    ])])
+fi
+AM_CONDITIONAL(USE_GIO, test "x$enable_gio" = "xyes")
+
 PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= $gtk_required],, [
     AC_MSG_ERROR(
     [
@@ -78,11 +102,11 @@ PKG_CHECK_MODULES(GTKSOURCEVIEW2, [gtksourceview-2.0 >= $gtksourceview2_required
            the development package.
     
     ])])
+
 PKG_CHECK_EXISTS([gtksourceview-2.0 >= 2.8], [have_gsv_2_8=yes], [have_gsv_2_8=no])
 if test "x$have_gsv_2_8" = "xyes"; then
 	AC_DEFINE([GSV_2_8], [1], [gtksourceview2 version >= 2.8])
 fi
-
 
 AC_SUBST(GTK_LIBS)
 AC_SUBST(GTK_CFLAGS)
