@@ -1,3 +1,8 @@
+2010-01-26  Onkar Shinde  <onkarshinde@gmail.com>
+
+	* configure.in, src/file-op-gio.*, src/Makefile.am: Experimental file
+	handling with GIO APIs, disabled by default.
+
 2010-01-25  Onkar Shinde  <onkarshinde@gmail.com>
 
 	* po/*.po, AUTHORS: Updated Gujarati and Spanish translation from
